--- a/_posts/2020-10-24-BDD.md
+++ b/_posts/2020-10-24-BDD.md
@@ -35,7 +35,7 @@ The size is exponential in the size of number of variables, so it is not a compa
 * Each terminal vertex is labeled 0 or 1.
 
 ## Shannon Decomposition
-$$f = x \cdot f_x + \bar{x}\cdot f_{\bar{x}}$$
+$f = x \cdot f_x + \bar{x} \cdot f_{\bar{x}}$
 
 $f_x$ and $f_y$ are the resulting functions when some argument $x$ is assigned a constant value of either 0 or 1. They are called *cofactors* of $f$.
 
