--- a/_posts/2017-05-01-CPSC320Final.md
+++ b/_posts/2017-05-01-CPSC320Final.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "CPSC 320 Final"
+title: "CPSC 320 Final - Intermediate Algorithm Design and Analysis"
 comments: true
 meta : cpsc 320
 ---
@@ -19,7 +19,7 @@ public static boolean isMajority(int[] A, int x, int n) {
 	if (i < 0 || i >= n) {
 		return false;
 	}
-	// check if x is present more than n/2 times 
+	// check if x is present more than n/2 times
 	if ((i + n/2 < n) && (A[i + n/2] == x)) {
 		return true;
 	}
@@ -66,7 +66,7 @@ Does this algoritm work?
 
 	Greedy will split like this: "bb"|"ba"   ("ba" is not word)
 
-	but actually can split:      "bbb"| "a" 
+	but actually can split:      "bbb"| "a"
 
 2. Give a DP solution to the problem
 
@@ -102,4 +102,3 @@ def dp(str):
 {% endhighlight %}
 
 [Online Judge](https://leetcode.com/problems/word-break/#/description)
-
